syntax = "proto3";
package Game;

message LoginReq {
  string account  = 1;
  string password = 2;
}

message LoginRes {
  bool   success  = 1;
  string message  = 2;
  int64  playerId = 3;
}
